--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <h1 id="title">Jquery & CSS3 background</h1>
+    <h1 id="title">test　site</h1>
 
     <div class="main">
         <span id="canvas1"></span>
